qr code initial

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
                 <li><a href="aboutMe.html">AboutMe</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
+                <img src="images/QRcode.png" alt="Index QR">
             </ul>
         </nav>
         <br />
