--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <li><a href="aboutMe.html">AboutMe</a></li>
                 <li><a href="education.html">Education</a></li>
                 <li><a href="hobbies.html">Hobbies</a></li>
-                <img src="images/QRcode.png" alt="Index QR">
+                <li><img src="images/QRcode.png" alt="Index QR"></li>
             </ul>
         </nav>
         <br />
